tambah article + edit

--- a/index.html
+++ b/index.html
@@ -85,38 +85,38 @@
               <img src="assets/slide1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Semua Resep</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, aliquid.</p>
+                <p class="card-text">Liat semua resep kami yang berkualitas dan sehat serta murah. Cocok untuk Mahasiswa!</p>
                 <a href="resep.html" class="btn btn-primary">Lebih Lanjut</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="assets/slide2.jpg" class="card-img-top" alt="...">
+              <img src="assets/olahraga.com_photos_jamesdevellis_" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Cara Hidup Sehat</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, nisi?</p>
+                <p class="card-text">Hidup sehat juga harus diimbangi dengan pola cara hidup juga!</p>
                 <a href="tips.html" class="btn btn-primary">Lebih Lanjut</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="assets/slide3.jpg" class="card-img-top" alt="...">
+              <img src="assets/aboutus.jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">About Us</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, totam.</p>
-                <a href="#" class="btn btn-primary">Lebih lanjut</a>
+                <p class="card-text">Liat tim produksi kami yang telah membuat semua ini bisa terjadi.</p>
+                <a href="about.html" class="btn btn-primary">Lebih lanjut</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="assets/slide3.jpg" class="card-img-top" alt="...">
+              <img src="assets/komunitas.jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Komunitas</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, eum!</p>
-                <a href="#" class="btn btn-primary">Lebih Lanjut</a>
+                <p class="card-text">Ikuti komunitas kami agar tidak ketinggalan informasi dari kami!</p>
+                <a href="#" class="btn btn-primary">Ikut</a>
               </div>
             </div>
           </div>
