--- a/resep.html
+++ b/resep.html
@@ -55,7 +55,7 @@
                 <img src="assets/steaktempe.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Steak Tempe</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, quia.</p>
+                  <p class="card-text">Steak ala resto tapi versi rumahan dan gampang dibuat dirumah sendiri!</p>
                   <a href="resep2.html" class="btn btn-primary">Lebih Lengkap</a>
                 </div>
               </div>
@@ -65,8 +65,8 @@
                 <img src="assets/tumistahu.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Tumis Tahu ala Resto</h5>
-                  <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, voluptate.</p>
-                  <a href="#" class="btn btn-primary">Lebih Lengkap</a>
+                  <p class="card-text">Chinese food yang sehat dan enak buat dibarengin nasi anget. Cocok buat lauk seharian!</p>
+                  <a href="resep1.html" class="btn btn-primary">Lebih Lengkap</a>
                 </div>
               </div>
             </div>
@@ -75,8 +75,8 @@
                 <img src="assets/tahuteriyaki.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Tahu Teriyaki</h5>
-                  <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, reprehenderit.</p>
-                  <a href="#" class="btn btn-primary">Lebih Lengkap</a>
+                  <p class="card-text">Makanan ala jepang yang versi sehat dan mudah buat jadi lauk seharian!</p>
+                  <a href="resep3.html" class="btn btn-primary">Lebih Lengkap</a>
                 </div>
               </div>
             </div>
@@ -90,21 +90,21 @@
           <div class="row align-items-center">
             <div class="col">
               <div class="card" style="width: 18rem;">
-                <img src="assets/slide1.jpg" class="card-img-top" alt="...">
+                <img src="assets/sopsosis.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Resep lain 1</h5>
+                  <h5 class="card-title">Sop Sayur Sosis</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, voluptatibus.</p>
-                  <a href="resep1.html" class="btn btn-primary">Lebih Lanjut</a>
+                  <a href="resep4.html" class="btn btn-primary">Lebih Lanjut</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card" style="width: 18rem;">
-                <img src="assets/slide2.jpg" class="card-img-top" alt="...">
+                <img src="assets/capcaybakso.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Resep lain 2</h5>
+                  <h5 class="card-title">Capcay Bakso</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, nisi?</p>
-                  <a href="#" class="btn btn-primary">Lebih Lanjut</a>
+                  <a href="resep5.html" class="btn btn-primary">Lebih Lanjut</a>
                 </div>
               </div>
             </div>
