--- a/resep2.html
+++ b/resep2.html
@@ -153,13 +153,13 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="..." class="img-fluid rounded-start" alt="...">
+                    <img src="assets/tumistahu.jpeg" class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">Tumis Tahu</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <a href="resep2.html" class="btn btn-primary">Ayo Cek!</a>
+                      <a href="resep1.html" class="btn btn-primary">Ayo Cek!</a>
                     </div>
                   </div>
                 </div>
@@ -169,13 +169,13 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="..." class="img-fluid rounded-start" alt="...">
+                    <img src="assets/sopsosis.jpeg" class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">Sop Sosis</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <a href="resep2.html" class="btn btn-primary">Ayo Cek!</a>
+                      <a href="resep4.html" class="btn btn-primary">Ayo Cek!</a>
                     </div>
                   </div>
                 </div>
@@ -190,13 +190,13 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="..." class="img-fluid rounded-start" alt="...">
+                    <img src="assets/tahuteriyaki.png" class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">Tahu Teriyaki</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <a href="resep2.html" class="btn btn-primary">Ayo Cek!</a>
+                      <a href="resep3.html" class="btn btn-primary">Ayo Cek!</a>
                     </div>
                   </div>
                 </div>
@@ -206,13 +206,13 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="..." class="img-fluid rounded-start" alt="...">
+                    <img src="assets/capcaybakso.jpeg" class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">Capcay Bakso</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <a href="resep2.html" class="btn btn-primary">Ayo Cek!</a>
+                      <a href="resep5.html" class="btn btn-primary">Ayo Cek!</a>
                     </div>
                   </div>
                 </div>
