--- a/resep4.html
+++ b/resep4.html
@@ -40,7 +40,7 @@
 
           <div class="container-2">
             <header>
-                <h1>Resep Tumis Tahu Sayur</h1>
+                <h1>Resep Sop Sayur Sosis Ekonomis</h1>
                 <h6 style="color: gray;">Miguel Valentino, 31 Agustus 2030</h6>
             </header>
     
@@ -50,11 +50,10 @@
                 </div>
     
                 <div class="main">
-                    <h2><img width="50%" src="assets/tumistahu.jpeg" alt=""></h2>
-                    <p>Meskipun sederhana, tumis tahu ini rasanya istimewa. Tekstur tahunya lembut, dibalut bumbu yang gurih sedap. Renyahnya sayuran membuat rasanya makin enak.
-                      Tahu merupakan salah satu menu favorit di banyak restoran Chinese Food. Diolah menjadi sup, muntahu, sapo tahu, tahu cabe garam atau sekedar ditumis dengan sayuran dengan saus gurih kental.                     
-                      Membuat tumis tahu sayuran ala restoran Chinese Food tidak sulit. Yang penting bahan utamanya yaitu tahu, harus yang berkualitas bagus. Paduan sayuran bisa kamu pilih sesuai selera.
-                    </p>
+                    <h2><img width="50%" src="assets/sopsosis.jpeg" alt=""></h2>
+                    <p>Sop ayam sosis adalah pilihan hidangan yang lezat, sehat, dan mudah dibuat dengan bahan-bahan yang sederhana. 
+                      Hidangan ini menggabungkan sayuran segar dan sosis ayam yang dipadukan dengan kaldu gurih. Kaya akan nutrisi dan rasa,
+                      sop ini cocok untuk disajikan kapan saja, terutama saat cuaca dingin atau ketika Anda ingin makanan yang menyehatkan namun praktis.</p>
                     <table>
                       <thead>
                           <tr>
@@ -64,32 +63,32 @@
                       </thead>
                       <tbody>
                           <tr>
-                              <td>Tahu Putih</td>
-                              <td> 200-300 gram</td>
+                              <td>Brokoli</td>
+                              <td> 60 gram</td>
                           </tr>
                           <tr>
                               <td>Wortel</td>
-                              <td> 1 Buah</td>
+                              <td> 3 buah</td>
                           </tr>
                           <tr>
-                            <td>Brokoli</td>
-                            <td> 100 gram</td>
+                            <td>Kentang</td>
+                            <td> 2 buah</td>
                           </tr>
                           <tr>
-                              <td>Cabai Merah</td>
-                              <td> 3-4 Buah</td>
+                              <td>Bawang Merah</td>
+                              <td> 3 Siung</td>
                           </tr>
                           <tr>
                             <td>Bawang Putih</td>
-                            <td> 2 siung</td>
+                            <td> 1 siung</td>
                           </tr>
                           <tr>
-                            <td>Saus Tiram</td>
+                            <td>Sosis Ayam</td>
+                            <td> 2 buah</td>
+                          </tr>
+                          <tr>
+                            <td>Bubuk Kaldu Ayam</td>
                             <td> 2 sdm</td>
-                          </tr>
-                          <tr>
-                            <td>kecap Asin</td>
-                            <td> 1 sdm</td>
                           </tr>
                           <tr>
                             <td>Garam</td>
@@ -100,32 +99,34 @@
                             <td> secukupnya</td>
                           </tr>
                           <tr>
-                            <td>Minyak Goreng</td>
-                            <td> 2 sdm</td>
+                            <td>Air</td>
+                            <td> 400 ml</td>
+                          </tr>
+                          <tr>
+                            <td>Minyak goreng</td>
+                            <td> secukupnya</td>
                           </tr>
                       </tbody>
                   </table>
 
-                  <h3>Total Perkiraan Harga = Rp 20.000-22.000 (untuk 3 Porsi)</h3>
+                  <h3>Total Perkiraan Harga = Rp 22.500 (untuk 3 Porsi)</h3>
 
                   <h2>Cara Memasak:</h2>
                   <ol class="text-start">
-                    <li>Potong dadu tahu putih dan wortel sesuai selera</li>
-                    <li>Potong kecil brokoli dan bawang putih.</li>
-                    <li>Panaskan minyak di wajan, tumis bawang putih hingga harum.</li>
-                    <li>Masukkan wortel dan brokoli, tumis 2-3 menit.</li>
-                    <li>Tambahkan tahu yang dipotong dadu, tumis hingga kecokelatan.</li>
-                    <li>Masukkan cabai merah, saus tiram, kecap asin, garam, dan merica. Aduk rata dan masak hingga sayuran matang.</li>
-                    <li>Sajikan selagi hangat.</li>
+                    <li>Cuci dan potong semua sayuran (wortel, brokoli, dan kentang) sesuai selera.</li>
+                    <li>Geprek bawang merah dan bawang putih, lalu potong kecil-kecil.</li>
+                    <li>Siapkan magic com (atau panci biasa jika tidak ada), panaskan minyak, dan tumis bawang merah, bawang putih, serta potongan sosis ayam hingga harum.</li>
+                    <li>Masukkan air ke dalam magic com, lalu tekan tombol cooking. Tunggu hingga mendidih (sekitar 15 menit).</li>
+                    <li>Setelah air mendidih, masukkan semua sayuran, garam, merica, dan bubuk kaldu ayam. Aduk rata.</li>
+                    <li>Tunggu hingga sayuran matang dan empuk. Setelah itu, angkat dan taburkan bawang goreng jika punya.</li>
+                    <li>Sop sosis ayam siap disajikan. Selamat makan!</li>
                   </ol>
 
                   <h2>Sumber Gizi:</h2>
                   <ul class="text-start">
-                    <li><strong>Tahu:</strong> Protein nabati, kalsium, dan zat besi.</li>
-                    <li><strong>Wortel:</strong> Vitamin A, serat, antioksidan.</li>
-                    <li><strong>Brokoli:</strong> Vitamin C, K, serat, antioksidan.</li>
-                    <li><strong>Bawang Putih:</strong> Sifat anti-inflamasi dan antioksidan.</li>
-                  </ul>
+                    <li><strong>Wortel:</strong> Sumber Vitamin A yang baik untuk kesehatan mata.</li>
+                    <li><strong>Brokoli dan Kentang:</strong> Sumber serat dan vitamin C yang penting untuk menjaga sistem kekebalan tubuh dan pencernaan.</li>
+                    <li><strong>Sosis Ayam:</strong> Sumber protein untuk pertumbuhan dan perbaikan sel-sel tubuh.</li>
                 </div>
   
                 <div class="sidebar-right"> 
@@ -160,13 +161,13 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="assets/sopsosis.jpeg" class="img-fluid rounded-start" alt="...">
+                    <img src="assets/tumistahu.jpeg" class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Sop Sosis</h5>
+                      <h5 class="card-title">Tumis tahu</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <a href="resep4.html" class="btn btn-primary">Ayo Cek!</a>
+                      <a href="resep1.html" class="btn btn-primary">Ayo Cek!</a>
                     </div>
                   </div>
                 </div>
