--- a/resep5.html
+++ b/resep5.html
@@ -40,7 +40,7 @@
 
           <div class="container-2">
             <header>
-                <h1>Resep Tumis Tahu Sayur</h1>
+                <h1>Resep Capcay Goreng Bakso </h1>
                 <h6 style="color: gray;">Miguel Valentino, 31 Agustus 2030</h6>
             </header>
     
@@ -50,11 +50,8 @@
                 </div>
     
                 <div class="main">
-                    <h2><img width="50%" src="assets/tumistahu.jpeg" alt=""></h2>
-                    <p>Meskipun sederhana, tumis tahu ini rasanya istimewa. Tekstur tahunya lembut, dibalut bumbu yang gurih sedap. Renyahnya sayuran membuat rasanya makin enak.
-                      Tahu merupakan salah satu menu favorit di banyak restoran Chinese Food. Diolah menjadi sup, muntahu, sapo tahu, tahu cabe garam atau sekedar ditumis dengan sayuran dengan saus gurih kental.                     
-                      Membuat tumis tahu sayuran ala restoran Chinese Food tidak sulit. Yang penting bahan utamanya yaitu tahu, harus yang berkualitas bagus. Paduan sayuran bisa kamu pilih sesuai selera.
-                    </p>
+                    <h2><img width="50%" src="assets/tahuteriyaki.png" alt=""></h2>
+                    <p>CapCay Baso adalah hidangan yang lezat dan mudah disiapkan. Dengan campuran berbagai sayuran dan baso, makanan ini cocok untuk disajikan sebagai hidangan sehat yang kaya akan serat dan protein. CapCay juga sangat fleksibel karena bisa disesuaikan dengan sayuran favorit Anda. Resep ini menggunakan bahan-bahan yang terjangkau dan mudah ditemukan.</p>
                     <table>
                       <thead>
                           <tr>
@@ -64,20 +61,20 @@
                       </thead>
                       <tbody>
                           <tr>
-                              <td>Tahu Putih</td>
-                              <td> 200-300 gram</td>
+                              <td>Bakso</td>
+                              <td> 5 butir</td>
+                          </tr>
+                          <tr>
+                              <td>Caisim</td>
+                              <td> 1 bonggol</td>
+                          </tr>
+                          <tr>
+                            <td>Sawi Putih</td>
+                            <td>1/2 bonggol</td>
                           </tr>
                           <tr>
                               <td>Wortel</td>
-                              <td> 1 Buah</td>
-                          </tr>
-                          <tr>
-                            <td>Brokoli</td>
-                            <td> 100 gram</td>
-                          </tr>
-                          <tr>
-                              <td>Cabai Merah</td>
-                              <td> 3-4 Buah</td>
+                              <td> 2 Buah</td>
                           </tr>
                           <tr>
                             <td>Bawang Putih</td>
@@ -86,10 +83,6 @@
                           <tr>
                             <td>Saus Tiram</td>
                             <td> 2 sdm</td>
-                          </tr>
-                          <tr>
-                            <td>kecap Asin</td>
-                            <td> 1 sdm</td>
                           </tr>
                           <tr>
                             <td>Garam</td>
@@ -106,26 +99,23 @@
                       </tbody>
                   </table>
 
-                  <h3>Total Perkiraan Harga = Rp 20.000-22.000 (untuk 3 Porsi)</h3>
+                  <h3>Total Perkiraan Harga = Rp 22.000 (untuk 3-4 Porsi)</h3>
 
                   <h2>Cara Memasak:</h2>
                   <ol class="text-start">
-                    <li>Potong dadu tahu putih dan wortel sesuai selera</li>
-                    <li>Potong kecil brokoli dan bawang putih.</li>
-                    <li>Panaskan minyak di wajan, tumis bawang putih hingga harum.</li>
-                    <li>Masukkan wortel dan brokoli, tumis 2-3 menit.</li>
-                    <li>Tambahkan tahu yang dipotong dadu, tumis hingga kecokelatan.</li>
-                    <li>Masukkan cabai merah, saus tiram, kecap asin, garam, dan merica. Aduk rata dan masak hingga sayuran matang.</li>
-                    <li>Sajikan selagi hangat.</li>
+                    <li>Siapkan semua bahan, termasuk sayuran, baso, dan potong sesuai selera.</li>
+                    <li>Panaskan minyak dalam wajan, tumis bawang putih cincang hingga harum.</li>
+                    <li>Masukkan potongan wortel dan tumis sebentar. Tambahkan baso dan air, aduk hingga rata.</li>
+                    <li>Beri garam, gula, penyedap rasa, dan saus tiram, lalu biarkan mendidih sebentar.</li>
+                    <li>Setelah air mendidih, masukkan caisim dan sawi putih, lalu aduk rata hingga sayuran layu dan matang.</li>
+                    <li>Angkat dan sajikan CapCay Baso selagi hangat.</li>
                   </ol>
 
                   <h2>Sumber Gizi:</h2>
                   <ul class="text-start">
-                    <li><strong>Tahu:</strong> Protein nabati, kalsium, dan zat besi.</li>
-                    <li><strong>Wortel:</strong> Vitamin A, serat, antioksidan.</li>
-                    <li><strong>Brokoli:</strong> Vitamin C, K, serat, antioksidan.</li>
-                    <li><strong>Bawang Putih:</strong> Sifat anti-inflamasi dan antioksidan.</li>
-                  </ul>
+                    <li><strong>Caisim & Sawi Putih:</strong> Kaya akan serat, vitamin A, C, dan K yang baik untuk kesehatan mata, kulit, dan sistem imun.</li>
+                    <li><strong>Wortel:</strong>  Sumber Vitamin A yang baik untuk kesehatan mata.</li>
+                    <li><strong>Bakso:</strong> Sumber protein yang membantu pertumbuhan badan dan jaringan tubuh.</li>
                 </div>
   
                 <div class="sidebar-right"> 
@@ -181,13 +171,13 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="assets/tahuteriyaki.png" class="img-fluid rounded-start" alt="...">
+                    <img src="assets/tumistahu.jpeg" class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title">Tahu Teriyaki</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <a href="resep3.html" class="btn btn-primary">Ayo Cek!</a>
+                      <a href="resep1.html" class="btn btn-primary">Ayo Cek!</a>
                     </div>
                   </div>
                 </div>
@@ -197,13 +187,13 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="assets/capcaybakso.jpeg" class="img-fluid rounded-start" alt="...">
+                    <img src="assets/tahuteriyaki.png" class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Capcay Bakso</h5>
+                      <h5 class="card-title">Card title</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <a href="resep5.html" class="btn btn-primary">Ayo Cek!</a>
+                      <a href="resep3.html" class="btn btn-primary">Ayo Cek!</a>
                     </div>
                   </div>
                 </div>
