--- a/resep3.html
+++ b/resep3.html
@@ -40,7 +40,7 @@
 
           <div class="container-2">
             <header>
-                <h1>Resep Tumis Tahu Sayur</h1>
+                <h1>Resep Tahu Teriyaki</h1>
                 <h6 style="color: gray;">Miguel Valentino, 31 Agustus 2030</h6>
             </header>
     
@@ -50,10 +50,9 @@
                 </div>
     
                 <div class="main">
-                    <h2><img width="50%" src="assets/tumistahu.jpeg" alt=""></h2>
-                    <p>Meskipun sederhana, tumis tahu ini rasanya istimewa. Tekstur tahunya lembut, dibalut bumbu yang gurih sedap. Renyahnya sayuran membuat rasanya makin enak.
-                      Tahu merupakan salah satu menu favorit di banyak restoran Chinese Food. Diolah menjadi sup, muntahu, sapo tahu, tahu cabe garam atau sekedar ditumis dengan sayuran dengan saus gurih kental.                     
-                      Membuat tumis tahu sayuran ala restoran Chinese Food tidak sulit. Yang penting bahan utamanya yaitu tahu, harus yang berkualitas bagus. Paduan sayuran bisa kamu pilih sesuai selera.
+                    <h2><img width="50%" src="assets/tahuteriyaki.png" alt=""></h2>
+                    <p>Meskipun sederhana, Tahu Teriyaki ini rasanya istimewa. Tekstur tahunya lembut, dibalut bumbu yang gurih sedap. Hidangan ini sangat cocok disajikan sebagai pendamping nasi hangat. 
+                      Tahu teriyaki adalah salah satu menu yang populer di restoran Asia dengan rasa manis dan gurih dari saus teriyaki dan saus tiram. 
                     </p>
                     <table>
                       <thead>
@@ -68,28 +67,24 @@
                               <td> 200-300 gram</td>
                           </tr>
                           <tr>
-                              <td>Wortel</td>
-                              <td> 1 Buah</td>
+                              <td>Bawang Bombay</td>
+                              <td> 1/2 Buah</td>
                           </tr>
                           <tr>
-                            <td>Brokoli</td>
-                            <td> 100 gram</td>
+                            <td>Daun bawang</td>
+                            <td> 4 batang</td>
                           </tr>
                           <tr>
-                              <td>Cabai Merah</td>
+                              <td>Saus Teriyaki</td>
                               <td> 3-4 Buah</td>
                           </tr>
                           <tr>
                             <td>Bawang Putih</td>
-                            <td> 2 siung</td>
+                            <td> 3 siung</td>
                           </tr>
                           <tr>
                             <td>Saus Tiram</td>
                             <td> 2 sdm</td>
-                          </tr>
-                          <tr>
-                            <td>kecap Asin</td>
-                            <td> 1 sdm</td>
                           </tr>
                           <tr>
                             <td>Garam</td>
@@ -106,26 +101,23 @@
                       </tbody>
                   </table>
 
-                  <h3>Total Perkiraan Harga = Rp 20.000-22.000 (untuk 3 Porsi)</h3>
+                  <h3>Total Perkiraan Harga = Rp 18.500 (untuk 3 Porsi)</h3>
 
                   <h2>Cara Memasak:</h2>
                   <ol class="text-start">
-                    <li>Potong dadu tahu putih dan wortel sesuai selera</li>
-                    <li>Potong kecil brokoli dan bawang putih.</li>
-                    <li>Panaskan minyak di wajan, tumis bawang putih hingga harum.</li>
-                    <li>Masukkan wortel dan brokoli, tumis 2-3 menit.</li>
-                    <li>Tambahkan tahu yang dipotong dadu, tumis hingga kecokelatan.</li>
-                    <li>Masukkan cabai merah, saus tiram, kecap asin, garam, dan merica. Aduk rata dan masak hingga sayuran matang.</li>
-                    <li>Sajikan selagi hangat.</li>
+                    <li>Goreng tahu hingga berkulit kuning kecoklatan. Angkat dan tiriskan.</li>
+                    <li>Tumis bawang putih dan bawang bombay dengan sedikit minyak hingga harum.</li>
+                    <li>Masukkan bunga bawang atau daun bawang, aduk hingga merata.</li>
+                    <li>Tambahkan tahu yang telah digoreng, saus teriyaki, saus tiram, dan lada bubuk. Aduk hingga bumbu merata dan menyerap.</li>
+                    <li>Cicipi rasanya, tambahkan garam sesuai selera. Jika rasanya sudah pas, matikan api.</li>
+                    <li>Sajikan tahu teriyaki hangat bersama nasi putih.</li>
                   </ol>
 
                   <h2>Sumber Gizi:</h2>
                   <ul class="text-start">
-                    <li><strong>Tahu:</strong> Protein nabati, kalsium, dan zat besi.</li>
-                    <li><strong>Wortel:</strong> Vitamin A, serat, antioksidan.</li>
-                    <li><strong>Brokoli:</strong> Vitamin C, K, serat, antioksidan.</li>
-                    <li><strong>Bawang Putih:</strong> Sifat anti-inflamasi dan antioksidan.</li>
-                  </ul>
+                    <li><strong>Tahu:</strong> Sumber protein nabati, kalsium, dan zat besi.</li>
+                    <li><strong>Bawang Putih:</strong> Mengandung antioksidan dan senyawa anti-inflamasi.</li>
+                    <li><strong>Bawang Bombay:</strong> Sumber serat dan vitamin C.</li>
                 </div>
   
                 <div class="sidebar-right"> 
@@ -181,13 +173,13 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="assets/tahuteriyaki.png" class="img-fluid rounded-start" alt="...">
+                    <img src="assets/tumistahu.jpeg" class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Tahu Teriyaki</h5>
+                      <h5 class="card-title">Tumis Tahu</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <a href="resep3.html" class="btn btn-primary">Ayo Cek!</a>
+                      <a href="resep1.html" class="btn btn-primary">Ayo Cek!</a>
                     </div>
                   </div>
                 </div>
