jquery popup iklan

--- a/index.html
+++ b/index.html
@@ -77,6 +77,27 @@
           </button>
         </div>
 
+        <div class="modal fade" id="welcomeModal" tabindex="-1" aria-labelledby="welcomeModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+              <h5 class="modal-title" id="welcomeModalLabel">Selamat Datang di MakMur Sehat!</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+            <div class="modal-body">
+              <a href="https://www.tokopedia.com/">
+              <img class="popupads" src="assets/post-slide-1.jpg" alt="">
+            </a>
+            Disponsori oleh ______
+            </div>
+            <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Mulai</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
         <h1 class="text-center"> Selamat datang di MakMur Sehat! </h1>
 
         <div class="row align-items-center mx-auto">
