edit home page + search bar

--- a/resep.html
+++ b/resep.html
@@ -83,8 +83,13 @@
           </div>
           </div>
 
-          <h1 class = "text-center"> Resep lainnya </h1>
+          <h1 class = "text-center"> Cari Resepmu Sesuai Selera </h1>
           <h5 class="text-center"> Murah, sehat dan Lezat!</h5>
+
+          <form class="search d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
 
           <div class="container-3 text-center mx-auto">
           <div class="row align-items-center">
