tambahtips,gambar,dancontact

--- a/tips.html
+++ b/tips.html
@@ -46,30 +46,30 @@
             <img src="assets/bahanlokal.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Pilih Bahan Lokal yang Terjangkau</h5>
-              <p class="card-text">bahan makanan lokal yang mudah didapat, terjangkau, dan kaya nutrisi</p>
-              <a href="tips1.html" class="btn btn-primary">Lebih Lengkap</a>
-            </div>
-          </div>
-        </div>
-        <!-- Tips end -->
-        <div class="col-md-4 mb-4">
-          <div class="card" style="width: 18rem;">
-            <img src="assets/masaksendiri.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Masak Sendiri</h5>
-              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, voluptate.</p>
-              <a href="#" class="btn btn-primary">Lebih Lengkap</a>
+              <p class="card-text">bahan makanan lokal yang mudah didapat, terjangkau, dan kaya nutrisi
+               </p>
             </div>
           </div>
         </div>
         <!-- Tips -->
         <div class="col-md-4 mb-4">
           <div class="card" style="width: 18rem;">
-            <img src="assets/tahuteriyaki.png" class="card-img-top" alt="...">
+            <img src="assets/masaksendiri.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Masak Sendiri</h5>
+              <p class="card-text">Memasak sendiri memungkinkan Anda mengontrol kualitas dan kebersihan bahan makanan. 
+                Selain lebih hemat, Anda juga dapat memastikan bahwa makanan yang dikonsumsi bebas dari bahan tambahan yang tidak sehat seperti pengawet atau gula berlebih.</p>
+            </div>
+          </div>
+        </div>
+        <!-- Tips -->
+        <div class="col-md-4 mb-4">
+          <div class="card" style="width: 18rem;">
+            <img src="assets/img1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Rencanakan Menu Harian</h5>
-              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, reprehenderit.</p>
-              <a href="#" class="btn btn-primary">Lebih Lengkap</a>
+              <p class="card-text">Gunakan bahan makanan lokal seperti sayuran hijau, tahu, tempe, dan buah-buahan musiman. <br>
+                Bahan-bahan ini mudah didapat dan harganya terjangkau, namun kaya akan nutrisi yang dibutuhkan tubuh.</p>
             </div>
           </div>
         </div>
@@ -78,26 +78,134 @@
       <div class="row justify-content-center mb-4">
         <div class="col-md-4 mb-4">
           <div class="card" style="width: 18rem;">
-            <img src="assets/steaktempe.webp" class="card-img-top" alt="...">
+            <img src="assets/img2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Kurangi Makanan Olahan</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, quia.</p>
-              <a href="tips1.html" class="btn btn-primary">Lebih Lengkap</a>
+              <p class="card-text">Makanan olahan cenderung mengandung bahan kimia tambahan, garam, dan gula berlebih yang tidak baik bagi tubuh.<br>
+                Gantilah makanan kemasan dengan bahan segar seperti sayuran, biji-bijian, dan protein nabati.</p>
             </div>
           </div>
         </div>
         <!-- Tips -->
         <div class="col-md-4 mb-4">
           <div class="card" style="width: 18rem;">
-            <img src="assets/tumistahu.jpeg" class="card-img-top" alt="...">
+            <img src="assets/img3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Makan Buah dan Sayur Setiap Hari</h5>
-              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, voluptate.</p>
-              <a href="#" class="btn btn-primary">Lebih Lengkap</a>
+              <p class="card-text">Pastikan mengonsumsi minimal lima porsi buah dan sayur setiap hari. Ini adalah sumber serat, vitamin, dan mineral yang sangat penting untuk menjaga kesehatan sistem pencernaan dan kekebalan tubuh.
+              </p>
             </div>
           </div>
         </div>
-        <!-- Tips end -->
+        <!-- Tips -->
+        <div class="col-md-4 mb-4">
+          <div class="card" style="width: 18rem;">
+            <img src="assets/air.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Perbanyak Konsumsi Air Putih</h5>
+              <p class="card-text">Hindari minuman manis dan lebih fokus pada minum air putih.
+                 Air membantu menjaga tubuh tetap terhidrasi, membantu proses pencernaan, serta mendukung fungsi otak dan organ vital lainnya.</p>
+            </div>
+          </div>
+        </div>
+        <!-- Tips -->
+        <div class="col-md-4 mb-4">
+          <div class="card" style="width: 18rem;">
+            <img src="assets/Lari.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Aktivitas Fisik Secara Teratur</h5>
+              <p class="card-text">Seimbangkan pola makan sehat dengan olahraga. T
+                dak perlu gym mahal, Anda bisa berolahraga secara sederhana seperti berjalan kaki, bersepeda, atau melakukan latihan ringan di rumah.</p>
+            </div>
+          </div>
+        </div> 
+        
+      <div class="col-md-4 mb-4">
+        <div class="card" style="width: 18rem;">
+          <img src="assets/tidur.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Tidur yang Cukup</h5>
+            <p class="card-text">Tidur berkualitas selama 7-8 jam sehari adalah bagian penting dari gaya hidup sehat. 
+              Kurang tidur bisa mengganggu metabolisme, daya tahan tubuh, dan produktivitas.</p>
+          </div>
+        </div>
+      </div> 
+      <!-- Tips -->
+        <div class="col-md-4 mb-4">
+          <div class="card" style="width: 18rem;">
+            <img src="assets/stress.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Kelola Stres dengan Baik</h5>
+              <p class="card-text">Stres berlebihan dapat memicu kebiasaan makan yang buruk dan mempengaruhi kesehatan fisik serta mental.<br>
+                Lakukan relaksasi seperti meditasi, yoga, atau hobi yang menyenangkan untuk menjaga keseimbangan mental.</p>
+            </div>
+          </div>
+        </div>
+        <!-- Tips -->
+          <div class="col-md-4 mb-4">
+            <div class="card" style="width: 18rem;">
+              <img src="assets/pasar.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Belanja di Pasar Tradisional</h5>
+                <p class="card-text">Selain lebih murah, bahan makanan di pasar tradisional biasanya lebih segar. Membeli produk langsung dari petani atau produsen lokal juga mendukung perekonomian setempat.</p>
+              </div>
+            </div>
+          </div>
+          <!-- Tips -->
+            <div class="col-md-4 mb-4">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/resep1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Coba Resep Baru</h5>
+                  <p class="card-text">Cobalah variasi resep sehat yang kreatif agar tidak bosan. Misalnya, buatlah olahan tempe menjadi berbagai hidangan seperti sate tempe, tempe goreng krispi, atau tumis tempe kacang panjang. <br>
+                    Kreativitas dalam memasak membuat makanan sehat tetap menarik dan lezat.</p>
+                </div>
+              </div>
+            </div>
+            <!-- Tips -->
+              <div class="col-md-4 mb-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="assets/sg.jpeg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Batasi Konsumsi Gula dan Garam</h5>
+                    <p class="card-text">Penggunaan gula dan garam yang berlebihan bisa berdampak buruk pada kesehatan, seperti meningkatkan risiko hipertensi, diabetes, dan penyakit jantung. <br>
+                      Gunakan alternatif seperti rempah-rempah alami untuk menambah cita rasa makanan tanpa harus menggunakan banyak gula atau garam.</p>
+                  </div>
+                </div>
+              </div>
+        <!-- Tips -->
+          <div class="col-md-4 mb-4">
+            <div class="card" style="width: 18rem;">
+              <img src="assets/porsi.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Makan dengan Porsi yang Seimbang</h5>
+                <p class="card-text">Pastikan setiap kali makan, ada keseimbangan antara karbohidrat, protein, serat, dan lemak sehat.
+                  Jangan makan berlebihan, dan selalu dengarkan kebutuhan tubuh, bukan sekadar nafsu makan.</p>
+              </div>
+            </div>
+          </div>
+          <!-- Tips -->
+            <div class="col-md-4 mb-4">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/label.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Perhatikan Label Makanan</h5>
+                  <p class="card-text">Jika terpaksa membeli produk kemasan, baca label nutrisi dengan cermat.<br>
+                    Hindari produk dengan kandungan bahan yang tidak dikenal atau yang mengandung banyak pengawet, pewarna, dan bahan kimia tambahan.</p>
+                </div>
+              </div>
+            </div>
+            <!-- Tips -->
+              <div class="col-md-4 mb-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="assets/berlebihan.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Hindari Kebiasaan Makan Berlebihan</h5>
+                    <p class="card-text">Cobalah untuk makan perlahan dan berhenti sebelum kenyang penuh. 
+                      Makan dengan penuh kesadaran membantu tubuh mengatur sinyal lapar dan kenyang dengan lebih baik.</p>
+                  </div>
+                </div>
+              </div>
       </div>
     </div>
 
@@ -106,7 +214,7 @@
       <a href="#" id="back-to-top" class="btn btn-primary"><i class="fas fa-arrow-up"></i></a>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,160L48,186.7C96,213,192,267,288,282.7C384,299,480,277,576,261.3C672,245,768,235,864,240C960,245,1056,267,1152,256C1248,245,1344,203,1392,181.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
       <section id = "contact" class="footer">
-        <h1 class="text-center">Contact</h1>
+        <h1 class="text-center">+62 895-8171-7897</h1>
         <div class="container-1 text-center contact">
             <a href="https://www.instagram.com/mvw.14/"><i class="fa-brands fa-instagram"></i></a>
             <a href=""><i class="fa-brands fa-whatsapp"></i></i></a>
@@ -115,4 +223,4 @@
     </section>
       
     </body>
-</html>
+</html> 
