--- a/about.html
+++ b/about.html
@@ -17,6 +17,11 @@
 </head>
 
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>          
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+    <script src="main.js"></script>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -47,7 +52,7 @@
     <section class="container my-5">
         <div class="row">
             <div class="col-lg-6">
-                <h1 class="mb-4">About Us</h1>
+                <h1 class="text-center"> <span class="typing-3"></span></h1>
                 <p>MakMur Sehat adalah sebuah platform yang bertujuan untuk membantu masyarakat mencapai gaya hidup yang lebih sehat dan seimbang melalui informasi yang terpercaya dan inspiratif. Kami hadir sebagai sumber daya yang kaya akan pengetahuan seputar kesehatan, dengan fokus utama pada resep makanan sehat, tips menjaga pola hidup sehat, hingga panduan untuk mengelola kesejahteraan fisik dan mental.</p>
                 <p>Kami memahami bahwa dalam kehidupan yang sibuk dan penuh dengan tantangan, menjaga kesehatan sering kali terlupakan. Oleh karena itu, MakMur Sehat berkomitmen untuk memberikan solusi praktis yang dapat diterapkan dalam kehidupan sehari-hari. Kami percaya bahwa setiap individu berhak untuk mendapatkan akses terhadap informasi kesehatan yang mudah dipahami, sehingga semua orang bisa mulai memperbaiki kualitas hidupnya tanpa harus merasa kewalahan.</p>
                 <p>Di MakMur Sehat, kami bekerja sama dengan tim profesional yang terdiri dari ahli gizi, chef berpengalaman, serta praktisi kesehatan yang memiliki dedikasi tinggi dalam bidangnya masing-masing. Kami terus berusaha untuk menghadirkan konten yang up-to-date dan berbasis penelitian, sehingga Anda bisa yakin bahwa setiap informasi yang kami bagikan adalah yang terbaik untuk kesehatan Anda.</p>
