--- a/resep.html
+++ b/resep.html
@@ -11,6 +11,7 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>          
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
         <script src="main.js"></script>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
@@ -45,7 +46,8 @@
           
           </div>
           
-          <h1 class = "text-center"> Resep Yang Populer </h1>
+          <h1 class="text-center"> <span class="typing-1"></span></h1>
+
           <h5 class="text-center"> Dipercaya oleh ratusan orang </h5>
 
           <div class="container-3 text-center mx-auto">
@@ -140,7 +142,7 @@
 
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,160L48,186.7C96,213,192,267,288,282.7C384,299,480,277,576,261.3C672,245,768,235,864,240C960,245,1056,267,1152,256C1248,245,1344,203,1392,181.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     <section id = "contact" class="footer">
-        <h1 class="text-center">+62 895-8171-7897</h1>
+        <h1 class="text-center"></h1>
         <div class="container-1 text-center contact">
             <a href="https://www.instagram.com/mvw.14/"><i class="fa-brands fa-instagram"></i></a>
             <a href=""><i class="fa-brands fa-whatsapp"></i></i></a>
