--- a/about.html
+++ b/about.html
@@ -91,11 +91,14 @@
     </section>
     
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,160L48,186.7C96,213,192,267,288,282.7C384,299,480,277,576,261.3C672,245,768,235,864,240C960,245,1056,267,1152,256C1248,245,1344,203,1392,181.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-
-    <!-- Footer -->
-    <footer class="text-center py-4">
-        <p>&copy; 2024 MakMur Sehat. All Rights Reserved.</p>
-    </footer>
+    <section id = "contact" class="footer">
+      <h2 class="text-center">© 2024 MakMur Sehat. All Rights Reserved.</h2>
+        <div class="container-1 text-center contact">
+            <a href="https://www.instagram.com/mvw.14/"><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-whatsapp"></i></i></a>
+        </div>
+        <p class="text-center watermark">Dibuat oleh Miguel, Andreas, James</p>
+    </section>
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
